# picoServer-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  agents.md  develop.md
crates/mc-core/: Cargo.toml
crates/mc-core/src/: lib.rs  varint.rs
crates/mc-proto/: Cargo.toml
crates/mc-proto/src/: config.rs  handshake.rs  lib.rs  login.rs  packet.rs  state.rs  status.rs
crates/mc-proxy/: Cargo.toml
crates/mc-proxy/src/: chunk.rs  config_handler.rs  lib.rs  login_packet.rs  main.rs  packet_ids.rs  player.rs  registry_data.rs  relay.rs  server.rs  server_state.rs
crates/mc-world/: Cargo.toml
crates/mc-world/src/: chunk.rs  lib.rs  nbt.rs  region.rs  world.rs
