[package]
name = "mc-proto"
version.workspace = true
edition.workspace = true
description = "Minecraft protocol packet codec, state machine, and Server List Ping"

[dependencies]
mc-core = { path = "../mc-core" }

bytes = "1"
thiserror = "2"
tokio = { version = "1", features = ["net", "io-util", "macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "mc-ping"
path = "src/bin/ping.rs"
